updated checkIn and checkOut
now they are showing on adminpage

--- a/views/admin-crud-update.handlebars
+++ b/views/admin-crud-update.handlebars
@@ -18,8 +18,8 @@
             <p>Name: {{user.firstName}} {{user.lastName}}</p>
             <p>Email: {{user.email}}</p>
             <p>Phone: {{user.phoneNumber}}</p>
-            <p>Check-In Date: to be added here</p>
-            <p>Check-Out Date: to be added here</p>
+            <p>Check-In Date: {{user.checkIn}}</p>
+            <p>Check-Out Date: {{user.checkOut}}</p>
         </div>
 
         {{!-- update user data --}}
