--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -47,8 +47,8 @@
                 <td>{{this.firstName}} {{this.lastName}}</td>
                 <td>{{this.email}}</td>
                 <td>{{this.phoneNumber}}</td>
-                <td>Check-In Date</td>
-                <td>Check-Out Date</td>
+                <td>{{this.checkIn}}</td>
+                <td>{{this.checkOut}}</td>
                 <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
                 {{!-- delete method is working now and let's leave at least 1 user that doesn't have an ID so that we can show Tommi
                 what happens if the user doesn't have an ID --}}
