--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -41,30 +41,35 @@
                 <td>{{this.firstName}} {{this.lastName}}</td>
                 <td>{{this.email}}</td>
                 <td>{{this.phoneNumber}}</td>
-                <td>Check-In Date</td>
-                <td>Check-Out Date</td>
+                <td>{{this.checkIn}}</td>
+                <td>{{this.checkOut}}</td>
                 <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
                 <td><a onclick="confirmDelete()" class="delete-button" href="/admin-crud-update/delete/{{this.userID}}">Delete</a></td>
             </tr>
             {{/each}}
         </table>
 
-        <div class="text">Please enter the id of the user to change their information:</div>
-        <br>
-        <form class="admin-id-search-form">
-        <input>
-        </form>
-        {{!-- removed the script code here, because I couldn't cover it with comment --}}
-        <button class="continue-button" type="submit">Send</button>
         <script>
-            function confirmDelete() {
-            var x;
-            if (confirm("Are you sure you want to delete this reservation?") == true) {
-                x = "Reservation was deleted";
-            } else {
-                x = "Reservation was not deleted";
-            }
-            return x;
+            function confirmDelete(userID) {
+                if (confirm("Are you sure you want to delete this reservation?")) {
+                    fetch(`/admin-crud-update/delete/${userID}?_method=DELETE`, {
+                        method: 'POST' // Use POST method as method-override is enabled
+                    })
+                        .then(response => {
+                            if (response.ok) {
+                                console.log('User deleted successfully');
+                                location.reload(); // Reload the page after successful deletion
+                            } else {
+                                throw new Error('Failed to delete user');
+                            }
+                        })
+                        .catch(error => {
+                            console.error(error);
+                            alert('Failed to delete user');
+                        });
+                } else {
+                    console.log("Reservation was not deleted");
+                }
             }
         </script>
     </div>
