--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,7 +6,7 @@
         <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="images/logo2.png"></a>
         <div class="right-side-header">
             <button id="toggle-high-contrast">High Contrast Mode</button>
-            <a class="login-page-button" href="#">Login</a>
+            <a class="login-page-button" href="/adminLogin">Admin Login</a>
         </div>
     </div>
 </header>
