--- a/views/room1.handlebars
+++ b/views/room1.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking form</title>
+    <title>Room 1</title>
 </head>
 <body>
 {{>header}}
@@ -11,11 +11,11 @@
     <div class="room-photos-container">
         <h1>Room 1</h1>
         <div class="room-photos">
-            <div class="photo1"></div>
-            <div class="photo2"></div>
-            <div class="photo3"></div>
-            <div class="photo4"></div>
-            <div class="photo5"></div>
+            <div class="photo1"><img class="rooms-mainPicture" src="images/hotelrooms/upholstery-4809588_1920.jpg" alt="A queen bed with a bathroom close by"></div>
+            <div class="photo2"><img class="rooms-picture" src="images/hotelrooms/pexels-max-vakhtbovycn-8146148.jpg" alt="A newly renovated bathroom"></div>
+            <div class="photo3"><img class="rooms-picture" src="images/hotelrooms/pexels-leonardo-rossatti-2598638.jpg" alt="The relaxing view of the longue area of the hotel"></div>
+            <div class="photo4"><img class="rooms-picture" src="images/hotelrooms/pexels-thorsten-technoman-338504.jpg" alt="Lovely pool in the resort with many chairs and a water-side bar"></div>
+            <div class="photo5"><img class="rooms-picture" src="images/hotelrooms/pexels-jean-van-der-meulen-1457847.jpg" alt="Another type of bathroom that may be in these rooms"></div>
         </div>
     </div>
     <div class="under-pictures-container">
