--- a/views/room2.handlebars
+++ b/views/room2.handlebars
@@ -11,11 +11,11 @@
     <div class="room-photos-container">
         <h1>Room 2</h1>
         <div class="room-photos">
-            <div class="photo1"></div>
-            <div class="photo2"></div>
-            <div class="photo3"></div>
-            <div class="photo4"></div>
-            <div class="photo5"></div>
+            <div class="photo1"><img class="rooms-mainPicture" src="images/hotelrooms/pexels-photo-210604.jpeg" alt="Bedroom with a queen size bed and balcony"></div>
+            <div class="photo2"><img class="rooms-picture" src="images/hotelrooms\pexels-arley-bateca-3941260.jpg" alt="Nice bright bathroom with good lighting"></div>
+            <div class="photo3"><img class="rooms-picture" src="images/hotelrooms/pexels-leonardo-rossatti-2598638.jpg" alt="The relaxing view of the longue area of the hotel"></div>
+            <div class="photo4"><img class="rooms-picture" src="images/hotelrooms/pexels-thorsten-technoman-338504.jpg" alt="Lovely pool in the resort with many chairs and a water-side bar"></div>
+            <div class="photo5"><img class="rooms-picture" src="images/hotelrooms/pexels-arthouse-studio-4618550.jpg" alt="A fellow customer who decided to stay at the resort for the rest of their life"></div>
         </div>
     </div>
     <div class="under-pictures-container">
