--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,12 +21,12 @@
         <div class="rooms-container">
         <a href="/room1" class="box-link" >
             <div class="room1 box">
-                <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/room-2269594_1920.jpg" alt="A spacious 1 double bed room with a sea view, coffee machine, safe, hairdryer, television, telephone, minibar and sofa for 103€ per night"></div>   
+                <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/upholstery-4809588_1920.jpg" alt="A spacious 1 double bed room for 103€ per night"></div>   
             </div>
         </a>
         <a href="/room2" class="box-link">
             <div class="room2 box">
-                <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/hotel-room-1505455_1920.jpg" alt="A spacious 1 queen bed room with a sea view, coffee machine, safe, iron, balcony, hairdryer, television, telephone, minibar, sofa and a bathtub for 165€ per night"></div>
+                <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/pexels-photo-210604.jpeg" alt="A spacious 1 queen bed room for 165€ per night"></div>
             </div>
         </a>
         </div>
