--- a/views/edem.handlebars
+++ b/views/edem.handlebars
@@ -1,2 +1,2 @@
-<p>FirstName: {{admins.firstName}}</p>
-<p>Last Name: {{admins.lastName}}</p>
+<p>FirstName: {{products.firstName}}</p>
+<p>Last Name: {{products.lastName}}</p>
