--- a/views/adminLogin.handlebars
+++ b/views/adminLogin.handlebars
@@ -13,7 +13,7 @@
     <form method="GET" action="/admins">
         <div class="fields">
         <input class="email txtField" type="text" placeholder="Email" name="email" required><br>
-        <input class="password txtField" type="password" placeholder="Password" name="Pasword" required><br>
+        <input class="password txtField" type="password" placeholder="Password" name="password" required><br>
         </div>
         <button class="continue-button" type="submit" value="Admin login" onclick="/adminpage">Login</button>        
     </form>
