--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -35,7 +35,7 @@
                 <th></th>
                 <th></th>
             </tr>
-            {{#each users}}
+            {{#each products}}
             <tr>
                 <td>{{this.userID}}</td>
                 <td>{{this.firstName}} {{this.lastName}}</td>
