--- a/views/adminLogin.handlebars
+++ b/views/adminLogin.handlebars
@@ -10,7 +10,7 @@
     <div class="booking-page-container">
     <h1>Admin Login</h1>
     <div class="booking-text"><h4>Please fill in all of the fields below:</h4></div>
-    <form method="GET" action="/admins">
+    <form method="POST" action="/admins">
         <div class="fields">
         <input class="email txtField" type="text" placeholder="Email" name="email" required><br>
         <input class="password txtField" type="password" placeholder="Password" name="password" required><br>
