--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -9,11 +9,10 @@
     
 {{>header}}
 <div class="thank-you-page-container">
-    <h1>Thank you for sending the form!</h1>
+    <h1>Thank you {{products.firstName}} for sending the form!</h1>
     <h3>We will contact you within 24 hours<br>
     You may edit or cancel your booking forms below</h3>    
-    <button class="continue-button" value="Edit your information">Edit Reservation</button>
-    <button class="continue-button" value="Cancel your reservation">Cancel Reservation</button>
+    <a href="/delete/{{products.userID}}">NEW DELETE LINK</a>
 </div>
 {{>footer}}
 </body>
