--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,10 +2,8 @@
 {{>header}}
 <div class="upper-part-page">
         <div class="tagline">
-            <h1 style="height: 100 px; margin: 30px; text-align: center;">Tagline ideas <br>
-            Every Day is a Sunny Stay<br>
-            Sunny Stay Every Day<br>
-            Sunny Day Your Way</h1>
+            <h1 style="height: 100 px; margin: 30px; text-align: center;">
+            Sunny Day Your Way!</h1>
         </div>
 
 
@@ -21,12 +19,12 @@
         <div class="rooms-container">
         <a href="/room1" class="box-link" >
             <div class="room1 box">
-                <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/upholstery-4809588_1920.jpg" alt="A spacious 1 double bed room for 103€ per night"></div>   
+                <div class="room1 room flex-container" ><img class="main-page-room-picture" src="images/hotelrooms/upholstery-4809588_1920.jpg" alt="A spacious 1 double bed room for 103€ per night"></div>   
             </div>
         </a>
         <a href="/room2" class="box-link">
             <div class="room2 box">
-                <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/pexels-photo-210604.jpeg" alt="A spacious 1 queen bed room for 165€ per night"></div>
+                <div class="room2 room flex-container"><img class="main-page-room-picture" src="images/hotelrooms/pexels-photo-210604.jpeg" alt="A spacious 1 queen bed room for 165€ per night"></div>
             </div>
         </a>
         </div>
