Admin login page redirect
Admin login button now redirects to the admin page showing all the products.

--- a/views/adminLogin.handlebars
+++ b/views/adminLogin.handlebars
@@ -15,7 +15,7 @@
         <input class="email txtField" type="text" placeholder="Email" name="email" required><br>
         <input class="password txtField" type="password" placeholder="Password" name="password" required><br>
         </div>
-        <button class="continue-button" type="submit" value="Admin login" onclick="/adminpage">Login</button>        
+        <button class="continue-button" type="submit" value="Admin login" onclick="/adminpageDELETE">Login</button>        
     </form>
 </div>
 </body>
