Admin login validation done

--- a/views/adminLogin.handlebars
+++ b/views/adminLogin.handlebars
@@ -9,7 +9,8 @@
 <body>
     <div class="booking-page-container">
     <h1>Admin Login</h1>
-    <div class="booking-text"><h4>Please fill in all of the fields below:</h4></div>
+    <div class="booking-text"><h4>Please fill in all of the fields below:</h4>
+    <p>{{loginCheck}}</p></div>
     <form method="POST" action="/admins">
         <div class="fields">
         <input class="email txtField" type="text" placeholder="Email" name="email" required><br>
