--- a/views/room1.handlebars
+++ b/views/room1.handlebars
@@ -39,7 +39,7 @@
         </div>
         <div class="price-reserve-container">
             <div class="price">€165/night</div>
-            <button class="continue-button" type="submit" value="Reserve" onclick="">Reserve</button>
+            <a class="continue-button" type="button" value="Reserve" href="/booking">Reserve</a>
         </div>
     </div>
 {{>footer}}
