--- a/views/room2.handlebars
+++ b/views/room2.handlebars
@@ -37,7 +37,7 @@
         </div>
         <div class="price-reserve-container">
             <div class="price">€103/night</div>
-            <button class="continue-button" type="submit" value="Reserve" onclick="">Reserve</button>
+            <a class="continue-button" type="submit" value="Reserve" href="/booking">Reserve</a>
         </div>
     </div>
 {{>footer}}
