--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,19 +1,24 @@
 <footer>
-    <div class="footer">
-        <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img
+    <div id="footer" class="footer">
+        <div class="flex-gap-1 flex-gap">
+            <a class="link-logo" aria-label="SunnySideSuncastle logo" href="/"><img id="logoF"
                     class="logo-header-footer" src="images/logo2.png"></a></div>
         <div class="flex-gap-2 flex-gap">
-            <div class="info-text">About SSS</div>
-            <div><a class="about-us-page-button" href="#">About Us</a></div>
-            <div><a class="faq-page-button" href="#">FAQ</a></div>
+            <div class="info-text text">About SSS</div>
+            <br>
+            <div><a class="about-us-page-button link" href="#">About Us</a></div>
+            <br>
+            <div><a class="faq-page-button link" href="#">FAQ</a></div>
         </div>
         <div class="flex-gap-3 flex-gap">
-            <div class="info-text">Contact Us</div>
-            <div><a class="support-email-phone" href="support@ssshotel.com">support@ssshotel.com</a></div>
-            <div><a class="support-email-phone" href="#">+ 92348012938</a></div>
+            <div class="info-text text">Contact Us</div>
+            <br>
+            <div><a class="support-email-phone link" href="support@ssshotel.com">support@ssshotel.com</a></div>
+            <br>
+            <div><a class="support-email-phone link" href="#">+ 92348012938</a></div>
         </div>
     </div>
-    <div class="copyright-text">
+    <div class="copyright-text text">
         &copy Sunny Side Sandcastle. All rights reserved
     </div>
 </footer>
