--- a/contrast mode test/contrast.css
+++ b/contrast mode test/contrast.css
@@ -11,6 +11,9 @@ body {
 }
 
 /* usefull links:
+https://www.smashingmagazine.com/2022/06/guide-windows-high-contrast-mode/
+https://dev.to/eevajonnapanula/things-you-probably-didn-t-know-about-windows-high-contrast-mode-5gb5
+https://web.dev/articles/color-and-contrast-accessibility
 https://blog.logrocket.com/boost-accessibility-high-contrast-users-css/
 http://www.colorsontheweb.com/color-theory/color-contrast
 https://www.perkins.org/resource/choosing-high-contrast-color-schemes-for-low-vision/
