--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking form</title>
 </head>
-<body>
-<header>    
+<body> 
 {{>header}}
-</header>
 <main>
-<section class="booking-page-container">
+<section id="blue-container" class="booking-page-container">
     <h1>Booking form</h1>
     <p class="booking-text"><h4>Please fill in all of the fields below:</h4></p>
     <form method="POST" action="/users">
@@ -39,7 +37,7 @@
                 <input class="checkOut txtField" type="text" placeholder="DD.MM.YYYY" name="checkOut" required><br>
             </div>
         </fieldset>    
-        <button class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
+        <button id="button" class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
     </form>
 </section>
 </main>
