Admin signup validated, Delete bug fixed
Admin signup feature has been validated with express-validator

Delete bug fixed from admin.handlebars and admin-crud-update.handlebars

--- a/views/adminLogin.handlebars
+++ b/views/adminLogin.handlebars
@@ -16,7 +16,8 @@
         <input class="email txtField" type="text" placeholder="Email" name="email" required><br>
         <input class="password txtField" type="password" placeholder="Password" name="password" required><br>
         </div>
-        <button class="continue-button" type="submit" value="Admin login" onclick="/adminpageDELETE">Login</button>        
+        <button class="continue-button" type="submit" value="Admin login" name= 'action' onclick="/adminpageDELETE">Login</button>   
+        <a class="continue-button" href="/admin-signup">Sign Up</a>   
     </form>
 </div>
 </body>
