--- a/views/admin-crud-update.handlebars
+++ b/views/admin-crud-update.handlebars
@@ -46,7 +46,7 @@
             </div>
 
             {{!-- To-Do: fix the delete buttn from this page --}}
-            <button class="delete-button" href="/adminpage" onclick="confirmDelete('{{this.userID}}')">Delete</button>
+            <button class="delete-button" href="/adminpage" onclick="confirmDelete({{products.userID}})">Delete</button>
             <button class="update-button" type="submit">Update User</button>
         </form>
 
@@ -54,28 +54,28 @@
     <br>
     <a class="button" href="/adminpage">Go Back</a>
 
-    <script>
+        <script>
             function confirmDelete(userID) {
                 if (confirm("Are you sure you want to delete this reservation?")) {
-                    fetch(`/admin-crud-update/delete/${userID}?_method=DELETE`, {
-                        method: 'POST' // Use POST method as method-override is enabled
+                    fetch(`/admin-crud-update/delete/${userID}`, {
+                    method: "GET", // Use POST method as method-override is enabled
                     })
-                        .then(response => {
-                            if (response.ok) {
-                                console.log('User deleted successfully');
-                                location.reload(); // Reload the page after successful deletion
-                            } else {
-                                throw new Error('Failed to delete user');
-                            }
-                        })
-                        .catch(error => {
-                            console.error(error);
-                            alert('Failed to delete user');
-                        });
+                    .then((response) => {
+                        if (response.ok) {
+                        console.log("User deleted successfully");
+                        location.reload(); // Reload the page after successful deletion
+                        } else {
+                        throw new Error("Failed to delete user");
+                        }
+                    })
+                    .catch((error) => {
+                        console.error(error);
+                        alert("Failed to delete user");
+                    });
                 } else {
                     console.log("Reservation was not deleted");
                 }
-            }
+                }
 
         </script>
 
