--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -30,7 +30,7 @@
                 <td>{{this.checkIn}}</td>
                 <td>{{this.checkOut}}</td>
                 <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
-                <td><a onclick="confirmDelete()" class="delete-button" href="/admin-crud-update/delete/{{this.userID}}">Delete</a></td>
+                <td><a onclick="confirmDelete({{this.userID}})" class="delete-button" >Delete</a></td>
             </tr>
             {{/each}}
         </table>
@@ -38,25 +38,26 @@
         <script>
             function confirmDelete(userID) {
                 if (confirm("Are you sure you want to delete this reservation?")) {
-                    fetch(`/admin-crud-update/delete/${userID}?_method=DELETE`, {
-                        method: 'POST' // Use POST method as method-override is enabled
+                    fetch(`/admin-crud-update/delete/${userID}`, {
+                    method: "GET", // Use POST method as method-override is enabled
                     })
-                        .then(response => {
-                            if (response.ok) {
-                                console.log('User deleted successfully');
-                                location.reload(); // Reload the page after successful deletion
-                            } else {
-                                throw new Error('Failed to delete user');
-                            }
-                        })
-                        .catch(error => {
-                            console.error(error);
-                            alert('Failed to delete user');
-                        });
+                    .then((response) => {
+                        if (response.ok) {
+                        console.log("User deleted successfully");
+                        location.reload(); // Reload the page after successful deletion
+                        } else {
+                        throw new Error("Failed to delete user");
+                        }
+                    })
+                    .catch((error) => {
+                        console.error(error);
+                        alert("Failed to delete user");
+                    });
                 } else {
                     console.log("Reservation was not deleted");
                 }
-            }
+                }
+
         </script>
     </div>
     
