--- a/public/style.css
+++ b/public/style.css
@@ -22,21 +22,21 @@ a:hover {
 }
 
 a:focus {
-  /* color: #eb6331; */
   border: 2px dashed;
   outline: 1px;
 }
 
-
 h2 {
-  /* padding: inherit; */
   margin: inherit;
   margin-left: 0px !important;
   font-size: 26px;
   font-weight: normal;
 }
 
-/* header */
+h3 {
+  margin-left: 10px;
+}
+
 .header {
   padding: 20px;
   text-align: center;
@@ -55,7 +55,6 @@ h2 {
   padding-top: 10px;
 }
 
-/* footer */
 .footer {
   padding: 40px;
   margin-top: 70px;
@@ -169,11 +168,12 @@ h2 {
   box-shadow: 0 6px 5px -5px rgb(167, 167, 167);
 }
 
+/* booking form */
 .fill-up-booking-form-button {
   background-color: #b6f0fc;
   color: black;
   margin: 0 auto;
-  border: 2px transparent;
+  border: 2px solid transparent;
   padding: 10 px;
   width: 40%;
   border-radius: 5px;
@@ -187,8 +187,17 @@ h2 {
   transform: translate(69%, -110%);
 }
 
-h2 {
-  margin-left: 80px;
+.fill-up-booking-form-button:hover {
+  background-color: #a1e7f5;
+  border: 2px solid transparent;
+  color: black;
+}
+
+.fill-up-booking-form-button:focus {
+  background-color: #a1e7f5;
+  border: 2px dashed;
+  padding: 0px;
+  outline: 2px;
 }
 
 .popular-options {
@@ -208,20 +217,7 @@ h2 {
   border-radius: 10px;
 }
 
-.fill-up-booking-form-button:hover {
-  background-color: #a1e7f5;
-  color: black;
-  border: 2px transparent;
-}
-
-.fill-up-booking-form-button:focus {
-  background-color: #a1e7f5;
-  /* color: black; */
-  border: 2px dashed;
-  padding: 0px;
-  outline: 2px;
-}
-
+/* login */
 .login-page-container {
   background-color: #b6f0fc;
   width: 40vw;
@@ -250,10 +246,11 @@ h2 {
   margin-top: 40px;
 }
 
+/* buttons */
 .continue-button {
   background: #2f9ac8;
   color: white;
-  border: 2px transparent;
+  border: 2px solid transparent;
   border-radius: 10px;
   padding: 10px;
   font-size: 20px;
@@ -261,6 +258,7 @@ h2 {
 }
 
 .continue-button:hover {
+  border: 2px solid transparent;
   background: #2a8eb9;
   color: white;
 }
@@ -301,6 +299,7 @@ h2 {
   color: white;
 }
 
+/* form */
 .field {
   width: 200px;
   height: 50px;
@@ -316,6 +315,7 @@ fieldset {
   border: transparent;
 }
 
+/* rooms */
 .room-photos-container {
   margin: 0 auto;
   width: 85%;
@@ -435,6 +435,7 @@ fieldset {
   border-radius: 10px;
 }
 
+/* admin page */
 .admin-page-container {
   background-color: #b6f0fc;
   width: 70vw;
@@ -458,12 +459,10 @@ table {
   margin: 20px;
   border-collapse: collapse;
   min-width: 400px;
-  /* border-radius: 20px 20px 0 0; does not work, same for shadow */
   font-size: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); shadow looks better but it doesn't work propetly */
 }
 
 /* different colour for every second row */
@@ -499,6 +498,7 @@ tr {
   padding-bottom: 5vh;
 }
 
+/* admin edit page */
 .admin-edit-container {
   display: flex;
   flex-direction: column;
@@ -536,6 +536,7 @@ tr {
   margin: 10px;
 }
 
+/* thank you page */
 .thank-you-page-container {
   background-color: #b6f0fc;
   width: 40vw;
@@ -557,15 +558,11 @@ tr {
   font-size: 20px;
 }
 
-h3 {
-  margin-left: 10px;
-}
 
 /* high-contrast mode (javascript was hardcoded into the header.handlebars) */
 .high-contrast{
   background-color: #000;
   color: #fff;
-  /* border: 2px solid white; */
 }
 
 .high-contrast-header-footer{
@@ -599,6 +596,7 @@ h3 {
 .high-contrast-button:hover{
   text-decoration: underline;
   background-color: black !important;
+  border: 2px solid yellow;
 }
 
 .high-contrast-blue-container{
@@ -649,7 +647,6 @@ https://blog.logrocket.com/boost-accessibility-high-contrast-users-css/
 http://www.colorsontheweb.com/color-theory/color-contrast
 https://www.perkins.org/resource/choosing-high-contrast-color-schemes-for-low-vision/
 https://www.chhs.colostate.edu/accessibility/best-practices-how-tos/color-contrast/
-
  */
 
 /* for phones */
