--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -11,7 +11,7 @@
 <div class="thank-you-page-container">
     <h1>Thank you {{products.firstName}} for sending the form!</h1>
     <h3>We will contact you within 24 hours<br>
-    You may cancel your booking forms below</h3>    
+    You may cancel your booking below</h3>    
     <a class="delete-button" href="/delete/{{products.userID}}">Cancel Reservation</a>
 </div>
 {{>footer}}
