polishing the code

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -13,9 +13,9 @@
         <div class="flex-gap-3 flex-gap">
             <div class="info-text text">Contact Us</div>
             <br>
-            <div><a class="support-email-phone link" href="support@ssshotel.com">support@ssshotel.com</a></div>
+            <div><a class="support-email-phone link" aria-label="Contact support email support@ssshotel.com" href="support@ssshotel.com">support@ssshotel.com</a></div>
             <br>
-            <div><a class="support-email-phone link" href="#">+ 92348012938</a></div>
+            <div><a class="support-email-phone link" aria-label="Contact support phone number +92348012938" href="#">+ 92348012938</a></div>
         </div>
     </div>
     <div class="copyright-text text">
