--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -31,10 +31,10 @@
                 <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" name="phoneNumber" required><br>
 
                 <lable for="checkIn">Check-in Date:</lable>
-                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month and year." name="checkIn" required><br>
+                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year." name="checkIn" required><br>
 
                 <lable for="checkOut">Check-Out  Date:</lable>
-                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month and year." name="checkOut" required><br>
+                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month, year." name="checkOut" required><br>
             </div>
         </fieldset>    
         <button id="button" class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
