--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -4,7 +4,7 @@
             <a class="link-logo" aria-label="SunnySideSuncastle logo" href="/"><img id="logoF"
                     class="logo-header-footer" src="images/logo2.png"></a></div>
         <div class="flex-gap-2 flex-gap">
-            <div class="info-text text">About SSS</div>
+            <div class="info-text text" aria-label="About Sunny Side Sandcastle">About SSS</div>
             <br>
             <div><a class="about-us-page-button link" href="#">About Us</a></div>
             <br>
@@ -18,7 +18,7 @@
             <div><a class="support-email-phone link" aria-label="Contact support phone number +92348012938" href="#">+ 92348012938</a></div>
         </div>
     </div>
-    <div class="copyright-text text">
+    <div class="copyright-text text" aria-label="Copyright Sunny Side Sandcastle. All rights reserved">
         &copy Sunny Side Sandcastle. All rights reserved
     </div>
 </footer>
