--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -31,10 +31,10 @@
                 <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" name="phoneNumber" required><br>
 
                 <lable for="checkIn">Check-in Date:</lable>
-                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year. For example, 12. 10. 2013" name="checkIn" required><span>Example: 12.10.2013</span><br>
+                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year. For example, 12, dot 10, dot 2013" name="checkIn" required><span>Example: 12.10.2013</span><br>
 
                 <lable for="checkOut">Check-Out  Date:</lable>
-                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month, year. For example, 20. 10. 2013" name="checkOut" required>Example: 20.10.2013<br>
+                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month, year. For example, 20, dot 10, dot 2013" name="checkOut" required>Example: 20.10.2013<br>
             </div>
         </fieldset>    
         <button id="button" class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
