--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -9,10 +9,10 @@
     
 {{>header}}
 <div class="thank-you-page-container">
-    <h1>Thank you {{products.firstName}} for sending the form!</h1>
+    <h1>Thank you {{users.firstName}} for sending the form!</h1>
     <h3>We will contact you within 24 hours<br>
     You may edit or cancel your booking forms below</h3>    
-    <a class="delete-button" href="/delete/{{products.userID}}">Cancel Reservation</a>
+    <a class="delete-button" href="/delete/{{users.userID}}">Cancel Reservation</a>
 </div>
 {{>footer}}
 </body>
