--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -21,7 +21,7 @@
                 <th></th>
                 <th></th>
             </tr>
-            {{#each products}}
+            {{#each users}}
             <tr>
                 <td>{{this.userID}}</td>
                 <td>{{this.firstName}} {{this.lastName}}</td>
