--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -12,7 +12,7 @@
     <h1>Thank you {{users.firstName}} for sending the form!</h1>
     <h3>We will contact you within 24 hours<br>
     You may cancel your booking below</h3>    
-    <a class="delete-button" href="/delete/{{products.userID}}">Cancel Reservation</a>
+    <a class="delete-button" href="/delete/{{users.userID}}">Cancel Reservation</a>
 </div>
 {{>footer}}
 </body>
