--- a/public/style.css
+++ b/public/style.css
@@ -274,11 +274,13 @@ h3 {
   border: none;
   border-radius: 10px;
   padding: 10px;
+  border: 2px solid transparent;
   font-size: 20px;
   cursor: pointer;
 }
 
 .update-button:hover {
+  border: 2px solid transparent;
   background: #6fd78b;
   color: rgb(0, 0, 0);
 }
@@ -288,12 +290,14 @@ h3 {
   color: white;
   border: none;
   border-radius: 10px;
+  border: 2px solid transparent;
   padding: 10px;
   font-size: 20px;
   cursor: pointer;
 }
 
 .delete-button:hover {
+  border: 2px solid transparent;
   background: #993533;
   color: white;
 }
